--- a/Dockerfile.debian-xfce-vnc
+++ b/Dockerfile.debian-xfce-vnc
@@ -28,7 +28,7 @@ ENV HOME=/headless \
     DEBIAN_FRONTEND=noninteractive \
     VNC_COL_DEPTH=24 \
     VNC_RESOLUTION=1280x1024 \
-    VNC_PW=vncpassword \
+    VNC_PW=123Qawe+ \
     VNC_VIEW_ONLY=false
 WORKDIR $HOME
 
@@ -48,18 +48,37 @@ RUN $INST_SCRIPTS/tigervnc.sh
 RUN $INST_SCRIPTS/no_vnc.sh
 
 ### Install firefox and chrome browser
-RUN $INST_SCRIPTS/firefox.sh
-RUN $INST_SCRIPTS/chrome.sh
+#RUN $INST_SCRIPTS/firefox.sh
+#RUN $INST_SCRIPTS/chrome.sh
 
 ### Install xfce UI
 RUN $INST_SCRIPTS/xfce_ui.sh
 ADD ./src/common/xfce/ $HOME/
+
+RUN dpkg -i $INST_SCRIPTS/MVS-3.0.1_x86_64_20241128.deb
+
+## Create HIKROBOT-MVS.desktop
+RUN echo "[Desktop Entry]" > $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Version=1.0" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Type=Application" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Name=HIKROBOT-MVS" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Comment=" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Exec=/opt/MVS/bin/MVS.sh" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Icon=camera-photo" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Path=/opt/MVS/" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "Terminal=false" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN echo "StartupNotify=false" >> $HOME/Desktop/HIKROBOT-MVS.desktop
+
+RUN chown 1000 $HOME/Desktop/HIKROBOT-MVS.desktop
+RUN chmod 777 $HOME/Desktop/HIKROBOT-MVS.desktop
 
 ### configure startup
 RUN $INST_SCRIPTS/libnss_wrapper.sh
 ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
 
+###Cleaning $INST_SCRIPTS
+RUN rm -rf $INST_SCRIPTS
 USER 1000
 
 ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
