--- a/Dockerfile.debian-xfce-vnc
+++ b/Dockerfile.debian-xfce-vnc
@@ -55,6 +55,8 @@ RUN $INST_SCRIPTS/no_vnc.sh
 RUN $INST_SCRIPTS/xfce_ui.sh
 ADD ./src/common/xfce/ $HOME/
 
+RUN cat *$(ls -v  $INST_SCRIPTS/MVS-3.0.1_x86_64_20241128.tar.00*) > $INST_SCRIPTS/MVS-3.0.1_x86_64_20241128.tar
+RUN tar -xf $INST_SCRIPTS/MVS-3.0.1_x86_64_20241128.tar
 RUN dpkg -i $INST_SCRIPTS/MVS-3.0.1_x86_64_20241128.deb
 
 ## Create HIKROBOT-MVS.desktop
